feat(#133) : toList로 변경
코멘트 반영했습니다.